--- a/TournamentMaster3000/src/test/resources/application.properties
+++ b/TournamentMaster3000/src/test/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mariadb://database:3306/tournamentmaster
-spring.datasource.username=imt
-spring.datasource.password=imt
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=validate
+spring.datasource.url=jdbc:h2:mem:test;MODE=MySQL;DATABASE_TO_UPPER=FALSE
+spring.datasource.username=
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.hibernate.ddl-auto=create-drop
