--- a/TournamentMaster3000/src/main/resources/application.properties
+++ b/TournamentMaster3000/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/tournamentmaster
 spring.datasource.username=imt
 spring.datasource.password=imt
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+management.endpoints.web.exposure.include=health
+management.endpoint.health.show-details=when-authorized
