--- a/TournamentMaster3000/pom.xml
+++ b/TournamentMaster3000/pom.xml
@@ -14,8 +14,6 @@
         <version>4.0.0</version>
     </parent>
 
-    <!-- TODO-11 BONUS Sécuriser tous les endpoints actuator sauf le /health avec le rôle ADMIN -->
-
     <dependencies>
 
         <dependency>
@@ -47,6 +45,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
 
         <dependency>
