--- a/TournamentMaster3000/src/main/resources/application.properties
+++ b/TournamentMaster3000/src/main/resources/application.properties
@@ -3,5 +3,8 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/tournamentmaster
 spring.datasource.username=imt
 spring.datasource.password=imt
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.sql.init.mode=always
+app.security.admin.username=admin
+app.security.admin.password=admin
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
