--- a/TournamentMaster3000/src/test/resources/application.properties
+++ b/TournamentMaster3000/src/test/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.username=
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
+app.security.admin.username=admin
+app.security.admin.password=admin
